--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="image-container" id="logo">
-            <img src="sources/imagenes/logo.jpg" alt="Logo">
+            <img src="sources/imagenes/logo.png" alt="Logo">
         </div>
     </header>
     <section id="hero">
@@ -33,30 +33,30 @@
         <p>Soy un desarrollador web que aprendio en Platzi, una escuela de tecnologia en linea, cuento con links de mis diplomas en Linkedin que van directamente a la base de datos de Platzi</p>
         <ul class="social-icons">
             <li>
-                <a href="#" class="social-icon" id="GitHub">
+                <a href="https://github.com/ProWebD" class="social-icon" id="GitHub">
                     <img src="sources/imagenes/iconos/github.png" alt="GitHub">
                 </a>
             </li>
             <li>
-                <a href="#" class="social-icon" id="Linkedin">
+                <a href="https://www.linkedin.com/in/alejandro-cruz-69798a213/" class="social-icon" id="Linkedin">
                     <img src="sources/imagenes/iconos/linkedin.png" alt="Linkedin">
                 </a>
             </li>
             <li>
-                <a href="#" class="social-icon" id="Platzi">
+                <a href="https://platzi.com/p/StNameAlejandroCruz/" class="social-icon" id="Platzi">
                     <img src="sources/imagenes/iconos/platzi.png" alt="Platzi">
                 </a>
             </li>
-            <li>
+            <!--<li>
                 <a href="#" class="social-icon" id="YouTUbe">
                     <img src="sources/imagenes/iconos/youtube.png" alt="YouTUbe">
                 </a>
-            </li>
-            <li>
-                <a href="#" class="social-icon" id="Twitter">
+            </li>-->
+            <!--  <li>
+               <a href="#" class="social-icon" id="Twitter">
                     <img src="sources/imagenes/iconos/twitter.png" alt="Twitter">
                 </a>
-            </li>
+            </li>-->
         </ul>
     </main>
 </body>
