--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
-
+    <!--Mailing Script Call-->
+    <script src="contacto.js"></script>
 </head>
 
 <body>
@@ -36,7 +36,8 @@
     </section>
     <main>
         <p>Soy un desarrollador web que aprendio en Platzi, una escuela de tecnologia en linea, cuento con links de mis diplomas en Linkedin que van directamente a la base de datos de Platzi</p>
-        <form action="contacto.php" method="POST">
+
+        <form id="contacto-form">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">Nombre</span>
                 <input class="form-control" type="text" name="name" placeholder="..." aria-label="Nombre" aria-describedby="basic-addon1">
@@ -57,7 +58,7 @@
                 <textarea class="form-control" name="message" placeholder="..." aria-label="Mensaje" aria-describedby="basic-addon1"></textarea>
             </div>
 
-            <input class="p-2 btn btn-outline-secondary" type="submit" value="Submit">
+            <input class="p-2 btn btn-outline-secondary" type="submit" value="Submit" href="/thankyou.html">
 
             <!--<input class="col-12 mt-3" type="email" name="email" placeholder="Email">
             <input class="col-12 mt-3" type="text" name="phone" placeholder="Telefono o WhatsApp">
